# summit

./: Cargo.toml  sailfish.toml
summit/: Cargo.toml  build.rs
summit/src/: date_time.rs  db.rs  dev.rs  http.rs  lib.rs  server.rs  util.rs  uuid.rs  web.rs
summit/src/dev/: db.rs  fake.rs
summit/src/dev/fake/: text.rs  user.rs  users.rs
summit/src/dev/fake/text/: en.rs  locale.rs  markdown.rs
summit/src/dev/fake/text/locale/: en.rs
summit/src/dev/fake/text/locale/en/: bob.rs  lorem.rs
summit/src/http/handler/: community.rs
summit/src/uuid/: base32_nowords.rs
summit/src/web/: graceful_shutdown.rs  handler.rs  shutdown.rs  template.rs
summit/src/web/extension/: request_id.rs
summit/src/web/handler/: community.rs  live.rs  static_assets.rs
summit/src/web/handler/dev/: restart.rs
summit/static/: dev_restart.js  style.css
templates/: community.stpl  foot.stpl  head.stpl
templates/component/: community_post.stpl  fedi_addr.stpl
templates/layout/: foot.stpl  footer.stpl  head.stpl  header.stpl
templates/page/: community.stpl
