[package]
name = "summit"
version = "0.0.1"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
edition = "2021"
license-file = "LICENSE"

[[bin]]
name = "summit"
path = "src/bin/summit.rs"

[lib]
name = "summit"
path = "src/lib.rs"

[features]
default = ["dev"]
dev = ["dep:fake"]

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
hyper = "0.14"
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum = { version = "0.6", features = ["tracing"] }
tower-http = { version = "0.4.0", features = ["trace"] }
http = "0.2"
sqlx = { version = "0.7.0-alpha", features = ["sqlite", "chrono", "runtime-tokio"] }
sailfish = "0.6"
tower-request-id = "0.2"
kanal = "0.1.0-pre8"
fake = { version = "2.6", optional = true }
async-trait.workspace = true

# TODO: Bin only. Waiting on some RFCs/Issues before we make them optional.
# - https://github.com/rust-lang/cargo/issues/1982
# - https://github.com/rust-lang/rfcs/pull/3374
clap = { version = "4.3", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }

[build-dependencies]
html-minifier = "4.0"
