[package]
name = "summit"
version = "0.0.1"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
edition = "2021"
license-file = "LICENSE"

[[bin]]
name = "summit"
path = "src/bin/summit.rs"

[lib]
name = "summit"
path = "src/lib.rs"

[features]
default = ["dev"]
dev = ["dep:fake", "dep:rand"]
local_dev = ["dev"]
simd = ["pulldown-cmark/simd"]

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
hyper = "0.14"
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum = { version = "0.6", features = ["tracing", "headers"] }
mime = "0.3"
http = "0.2"
tower-http = { version = "0.4.0", features = ["trace"] }
tower-layer = "0.3"
tower-service = "0.3"
sqlx = { version = "0.7.0-alpha", features = ["sqlite", "chrono", "runtime-tokio"] }
sailfish = "0.6"
kanal = "0.1.0-pre8"
async-trait.workspace = true
futures = "0.3"
async-stream = "0.3"
chrono = { workspace = true, features = ["serde"] }
compact_str = { workspace = true, features = ["serde"] }
bytesize = "1.2"
uuid7 = "0.6"
data-encoding = "2.4"
data-encoding-macro = "0.1"
pulldown-cmark = { version = "0.9", default-features = false, features = [] }

# TODO: Bin only. Waiting on some RFCs/Issues before we make them optional.
# - https://github.com/rust-lang/cargo/issues/1982
# - https://github.com/rust-lang/rfcs/pull/3374
clap = { version = "4.3", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }

# features: dev
fake = { version = "2.6", optional = true, features = ["derive"] }
rand = { version = "0.8", optional = true }

[build-dependencies]
anyhow.workspace = true
minify-html = "0.11"
css-minify = "0.3"
